# fastapi-auth-system

./: .gitignore  README.md  dump.rdb  main.py  pyproject.toml
project/apis/v1/: __init__.py  auth_system.py
project/core/: __init__.py  config.py  database.py  httpException.py  logging_config.py  rateLimiter.py  redis.py  security.py  standard_json_response.py
project/models/: __init__.py  tokenModels.py  userModels.py
project/schemas/: __init__.py  jsonResponseSchema.py  tokenSchemas.py  userSchemas.py
project/services/: __init__.py  add_all_tokens_to_blacklist.py  add_token_to_blacklist.py  add_token_to_redis.py  create_access_token.py  create_and_store_refresh_token.py  deactivate_refresh_tokens.py  delete_user_from_redis.py  get_current_user.py  get_remaining_time.py  is_token_in_redis.py  process_login.py  process_logout.py  render_email_template.py  send_email.py  token_key_format.py
project/templates/: account_confirmation_template.html  reset_password_template.html
